fix publishing